[metadata]
name = pmdownloader
version = 1.0.1
author = Razin Sami
author_email = razinbrz69@gmail.com
description = Library to download media files
keywords = media, video, audio, mp3, mp4, downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/razin-s/pmdownloader
project_urls =
    Bug Tracker = https://github.com/razin-s/pmdownloader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
[options.packages.find]
where = src